T500 Still/Flow Meter/build/log/idf_py_stdout_output_8348
Command: ninja all
[1/11] Performing build step for 'bootloader'
[1/1] cd "/home/rob/Documents/Github/shed-scripts/T500 Still/Flow Meter/build/bootloader" && /home/rob/.espressif/python_env/idf6.0_py3.11_env/bin/python /home/rob/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/rob/Documents/Github/shed-scripts/T500\ Still/Flow\ Meter/build/bootloader/bootloader.bin
Bootloader binary size 0x6690 bytes. 0x970 bytes (8%) free.
[2/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/http_server.c.obj
[3/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/web_dashboard.c.obj
[4/11] No install step for 'bootloader'
[5/11] Completed 'bootloader'
[6/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/rob/.espressif/tools/xtensa-esp-elf/esp-15.1.0_20250607/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.0-dev-1362-g346870a304\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"/home/rob/Documents/Github/shed-scripts/T500 Still/Flow Meter/build/config" -I"/home/rob/Documents/Github/shed-scripts/T500 Still/Flow Meter/main" -I/home/rob/esp-idf/components/newlib/platform_include -I/home/rob/esp-idf/components/freertos/config/include -I/home/rob/esp-idf/components/freertos/config/include/freertos -I/home/rob/esp-idf/components/freertos/config/xtensa/include -I/home/rob/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/rob/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/rob/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/rob/esp-idf/components/freertos/esp_additions/include -I/home/rob/esp-idf/components/esp_hw_support/include -I/home/rob/esp-idf/components/esp_hw_support/include/soc -I/home/rob/esp-idf/components/esp_hw_support/dma/include -I/home/rob/esp-idf/components/esp_hw_support/ldo/include -I/home/rob/esp-idf/components/esp_hw_support/debug_probe/include -I/home/rob/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/rob/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/rob/esp-idf/components/esp_hw_support/power_supply/include -I/home/rob/esp-idf/components/esp_hw_support/port/esp32/. -I/home/rob/esp-idf/components/esp_hw_support/port/esp32/include -I/home/rob/esp-idf/components/heap/include -I/home/rob/esp-idf/components/heap/tlsf -I/home/rob/esp-idf/components/log/include -I/home/rob/esp-idf/components/soc/include -I/home/rob/esp-idf/components/soc/esp32 -I/home/rob/esp-idf/components/soc/esp32/include -I/home/rob/esp-idf/components/soc/esp32/register -I/home/rob/esp-idf/components/hal/platform_port/include -I/home/rob/esp-idf/components/hal/esp32/include -I/home/rob/esp-idf/components/hal/include -I/home/rob/esp-idf/components/esp_rom/include -I/home/rob/esp-idf/components/esp_rom/esp32/include -I/home/rob/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/rob/esp-idf/components/esp_rom/esp32 -I/home/rob/esp-idf/components/esp_common/include -I/home/rob/esp-idf/components/esp_system/include -I/home/rob/esp-idf/components/esp_system/port/soc -I/home/rob/esp-idf/components/esp_system/port/include/private -I/home/rob/esp-idf/components/xtensa/esp32/include -I/home/rob/esp-idf/components/xtensa/include -I/home/rob/esp-idf/components/xtensa/deprecated_include -I/home/rob/esp-idf/components/lwip/include -I/home/rob/esp-idf/components/lwip/include/apps -I/home/rob/esp-idf/components/lwip/include/apps/sntp -I/home/rob/esp-idf/components/lwip/lwip/src/include -I/home/rob/esp-idf/components/lwip/port/include -I/home/rob/esp-idf/components/lwip/port/freertos/include -I/home/rob/esp-idf/components/lwip/port/esp32xx/include -I/home/rob/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/rob/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/rob/esp-idf/components/esp_wifi/include -I/home/rob/esp-idf/components/esp_wifi/include/local -I/home/rob/esp-idf/components/esp_wifi/wifi_apps/include -I/home/rob/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/rob/esp-idf/components/esp_event/include -I/home/rob/esp-idf/components/esp_phy/include -I/home/rob/esp-idf/components/esp_phy/esp32/include -I/home/rob/esp-idf/components/esp_netif/include -I/home/rob/esp-idf/components/nvs_flash/include -I/home/rob/esp-idf/components/esp_partition/include -I/home/rob/esp-idf/components/esp_http_server/include -I/home/rob/esp-idf/components/http_parser -I/home/rob/esp-idf/components/esp_https_ota/include -I/home/rob/esp-idf/components/esp_http_client/include -I/home/rob/esp-idf/components/bootloader_support/include -I/home/rob/esp-idf/components/bootloader_support/bootloader_flash/include -I/home/rob/esp-idf/components/esp_bootloader_format/include -I/home/rob/esp-idf/components/esp_app_format/include -I/home/rob/esp-idf/components/app_update/include -I/home/rob/esp-idf/components/esp_driver_gpio/include -I/home/rob/esp-idf/components/esp_driver_ledc/include -I/home/rob/esp-idf/components/esp_timer/include -I/home/rob/esp-idf/components/esp_adc/include -I/home/rob/esp-idf/components/esp_adc/interface -I/home/rob/esp-idf/components/esp_adc/esp32/include -mlongcalls -Wno-frame-address -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap "-fmacro-prefix-map=/home/rob/Documents/Github/shed-scripts/T500 Still/Flow Meter=." -fmacro-prefix-map=/home/rob/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c '/home/rob/Documents/Github/shed-scripts/T500 Still/Flow Meter/main/main.c'
/home/rob/Documents/Github/shed-scripts/T500 Still/Flow Meter/main/main.c:79:5: error: redeclaration of enumerator 'MODE_SETPOINT'
   79 |     MODE_SETPOINT = 0,    // Fixed setpoint control
      |     ^~~~~~~~~~~~~
In file included from /home/rob/Documents/Github/shed-scripts/T500 Still/Flow Meter/main/main.c:24:
/home/rob/Documents/Github/shed-scripts/T500 Still/Flow Meter/main/web_dashboard.h:9:5: note: previous definition of 'MODE_SETPOINT' with type 'enum <anonymous>'
    9 |     MODE_SETPOINT = 0,    // Fixed setpoint control
      |     ^~~~~~~~~~~~~
/home/rob/Documents/Github/shed-scripts/T500 Still/Flow Meter/main/main.c:80:5: error: redeclaration of enumerator 'MODE_EQUALIZE'
   80 |     MODE_EQUALIZE = 1,    // Match output to input
      |     ^~~~~~~~~~~~~
/home/rob/Documents/Github/shed-scripts/T500 Still/Flow Meter/main/web_dashboard.h:10:5: note: previous definition of 'MODE_EQUALIZE' with type 'enum <anonymous>'
   10 |     MODE_EQUALIZE = 1,    // Match output to input
      |     ^~~~~~~~~~~~~
/home/rob/Documents/Github/shed-scripts/T500 Still/Flow Meter/main/main.c:81:5: error: redeclaration of enumerator 'MODE_AUTO'
   81 |     MODE_AUTO = 2         // Pressure-compensated setpoint
      |     ^~~~~~~~~
/home/rob/Documents/Github/shed-scripts/T500 Still/Flow Meter/main/web_dashboard.h:11:5: note: previous definition of 'MODE_AUTO' with type 'enum <anonymous>'
   11 |     MODE_AUTO = 2         // Pressure-compensated setpoint
      |     ^~~~~~~~~
/home/rob/Documents/Github/shed-scripts/T500 Still/Flow Meter/main/main.c:82:3: error: conflicting types for 'control_mode_t'; have 'enum <anonymous>'
   82 | } control_mode_t;
      |   ^~~~~~~~~~~~~~
/home/rob/Documents/Github/shed-scripts/T500 Still/Flow Meter/main/web_dashboard.h:12:3: note: previous declaration of 'control_mode_t' with type 'control_mode_t'
   12 | } control_mode_t;
      |   ^~~~~~~~~~~~~~
/home/rob/Documents/Github/shed-scripts/T500 Still/Flow Meter/main/main.c:84:25: error: conflicting types for 'CONTROL_MODE'; have 'control_mode_t'
   84 | volatile control_mode_t CONTROL_MODE = MODE_SETPOINT; // start in Setpoint mode
      |                         ^~~~~~~~~~~~
/home/rob/Documents/Github/shed-scripts/T500 Still/Flow Meter/main/web_dashboard.h:22:32: note: previous declaration of 'CONTROL_MODE' with type 'control_mode_t'
   22 | extern volatile control_mode_t CONTROL_MODE;
      |                                ^~~~~~~~~~~~
ninja: build stopped: subcommand failed.
